--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=AwesomeNetwork;Trusted_Connection=True;TrustServerCertificate=Yes;"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=AwesomeNetwork;Trusted_Connection=True;TrustServerCertificate=Yes;MultipleActiveResultSets=true"
   },
 
   "Logging": {
